fix: scroll overflow

--- a/src/components/CustomScrollbar/CustomScrollbar.css
+++ b/src/components/CustomScrollbar/CustomScrollbar.css
@@ -1,5 +1,5 @@
 .scrollable-container {
-    height: 400px;
+    height: 100%;
     scrollbar-width: thin;
     padding: 0 10px 10px 10px;
     overflow: scroll;
